--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,6 +28,19 @@
   color: #61dafb;
 }
 
+ul {
+  list-style-type: none;
+  padding: 0px;
+  margin: 0px;
+  display:flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+ul li {
+  border: 10px solid red;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
