Streaming: fix login, add thought adding, and make edit button visable

--- a/client/src/pages/MainFeed/style.css
+++ b/client/src/pages/MainFeed/style.css
@@ -1,12 +1,17 @@
 #feed {
-  width: 50rem;
+  width: 48%;
 }
 
 #mainFeed {
-  width: 90rem;
+  width: 100%;
 }
 
-#mainFeed ul {
-  width: 90rem;
+#mainFeed .mainPage {
+  width: 100%;
+  display: flex;
+  flex-direction:row;
 }
 
+#userInfo {
+  width: 15%;
+}
