--- a/client/src/components/ThoughtPost/style.css
+++ b/client/src/components/ThoughtPost/style.css
@@ -19,3 +19,10 @@
 .thought {
   padding: 0rem 1rem 0rem 1rem;
 }
+
+.actions {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
