--- a/client/src/components/ThoughtPost/style.css
+++ b/client/src/components/ThoughtPost/style.css
@@ -11,7 +11,7 @@
 .headliner ul {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: safe-center;
   align-content: center;
 		
 }
