--- a/client/src/components/ThoughtPost/style.css
+++ b/client/src/components/ThoughtPost/style.css
@@ -29,4 +29,13 @@
 .liked-thought {
   background-color: purple ;
 }
-  
+
+.entry a {
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  z-index: 1;
+}
