work on optimizing feeds and combined UserInfo and Stats

--- a/client/src/components/UserInfo/style.css
+++ b/client/src/components/UserInfo/style.css
@@ -11,4 +11,12 @@
   flex-direction: row;
 }
 
+.userStats {
+  display: flex;
+  flex-direction: column;
+}
 
+#friendsList {
+  display: flex;
+  flex-direction: column;
+}
