--- a/client/src/components/Posts/PostStyling/style.css
+++ b/client/src/components/Posts/PostStyling/style.css
@@ -12,12 +12,12 @@
   display: flex;
   flex-direction: row;
   justify-content: safe-center;
-  align-content: center;
-		
+  align-content: center;		
 }
 
 .thought {
-  padding: 0rem 1rem 0rem 1rem;
+  padding: 0px 50px 0px 50px;
+    margin: 0px 50px 0px 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -35,13 +35,18 @@
 }
 
 .currentThought {
-  align-self: flex-start;
+  align-self: center;
 }
 
 .originalThought {
   margin: 5px;
   padding: 10px;
   border: solid red 1px;
-  width: 80%;
-	  
+  width: 80%;	  
+}
+
+.bottom-buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
