--- a/client/src/components/UserList/style.css
+++ b/client/src/components/UserList/style.css
@@ -1,3 +1,15 @@
-.friend a {
-  padding: 1px;
+#friendsList {
+  display: flex;
+  flex-direction: column;
 }
+
+#followingList {
+  display: flex;
+  flex-direction: column;
+}
+
+#blockedList {
+  display: flex;
+  flex-direction: column;
+}
+
