--- a/client/src/components/Feed/style.css
+++ b/client/src/components/Feed/style.css
@@ -1,10 +1,13 @@
 .feed {
-  width: 100%;
+  width: 90%;
   display:flex;
   flex-direction: column;
+  align-items: center;
+  
 }
 
 .feedPosts {
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
