--- a/client/src/components/UserInfo/style.css
+++ b/client/src/components/UserInfo/style.css
@@ -2,10 +2,6 @@
   text-decoration: underline;
 }
 
-.noEditItem {
-  visibility: collapse;
-}
-
 #userEdit {
   display: flex;
   flex-direction: row;
@@ -16,3 +12,8 @@
   flex-direction: column;
 }
 
+.userInfo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
