--- a/client/src/pages/MainStyles/style.css
+++ b/client/src/pages/MainStyles/style.css
@@ -1,9 +1,16 @@
 #feed {
-  width: 70%;
+  width: 90%;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+
 }
 
 #feedContainer {
   width: 1000px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
 
 #mainFeed .mainPage {
@@ -14,5 +21,4 @@
 
 #userInfo {
   width: 25%;
-
 }
