--- a/client/src/components/Posts/PostStyling/style.css
+++ b/client/src/components/Posts/PostStyling/style.css
@@ -6,21 +6,24 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-content: center;
+  flex-shrink: 0;
 }
 
 .headliner ul {
   display: flex;
   flex-direction: row;
   justify-content: safe-center;
-  align-content: center;		
+  align-content: center;
+  flex-shrink: 0;
 }
 
 .thought {
   padding: 0px 50px 0px 50px;
-    margin: 0px 50px 0px 50px;
+  margin: 0px 50px 0px 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  flex-shrink: 0;
 }
 
 .actions {
