--- a/client/src/pages/MainStyles/style.css
+++ b/client/src/pages/MainStyles/style.css
@@ -3,7 +3,7 @@
   display:flex;
   flex-direction: column;
   align-items: center;
-
+  flex-shrink: 0;
 }
 
 #feedContainer {
@@ -11,12 +11,14 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+  flex-shrink: 0;
 }
 
 #mainFeed .mainPage {
   width: 100%;
   display: flex;
   flex-direction:row;
+  flex-shrink: 0;
 }
 
 #userInfo {
