--- a/client/src/components/UserInfo/style.css
+++ b/client/src/components/UserInfo/style.css
@@ -1,6 +1,3 @@
-.userInfo h1 {
-  text-decoration: underline;
-}
 
 #userEdit {
   display: flex;
@@ -18,4 +15,9 @@
   flex-direction: column;
   align-items: center;
   flex-shrink: 0;
+  background-color: grey;
+}
+
+.userInfo h1 {
+  text-decoration: underline;
 }
