little color and shape of nav bar, user info, and notificaitons started

--- a/client/src/components/Notifications/style.css
+++ b/client/src/components/Notifications/style.css
@@ -2,3 +2,39 @@
   display: flex;
   flex-direction: column;
 }
+
+.notifications li {
+  display:flex;
+  flex-direciton: row;
+  justify-content: space-between;
+}
+
+.notifProfile {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+}
+
+.notifProfile p {
+  padding: 5px;
+  margin: 5px;
+}
+
+.thoughtRef {
+  border: solid red 1px;
+}
+
+.actions {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+  width: 80px;
+}
+
+.actions button {
+  height: 30px;
+  width: 75px;
+  
+}
