--- a/client/src/components/Navbar/style.css
+++ b/client/src/components/Navbar/style.css
@@ -7,7 +7,10 @@
   flex-direction: row;
   justify-content: space-evenly;
   width: 100%;
-  border: solid red 5px;
-  
+  border-radius: 50px;
+  background-color: #a07e82;
+  shadow: 
 }
+
+
 
