--- a/client/src/components/UserInfo/style.css
+++ b/client/src/components/UserInfo/style.css
@@ -4,10 +4,11 @@
   flex-direction: row;
 }
 
-.userStats {
+.userStats ul {
   display: flex;
   flex-direction: column;
   flex-shrink: 0;
+  border-radius: 10px;
 }
 
 .userInfo {
@@ -15,9 +16,25 @@
   flex-direction: column;
   align-items: center;
   flex-shrink: 0;
-  background-color: grey;
+  background-color: #9b454f;
+  border-radius: 25px;
+  border: solid #490b31 2px;
 }
 
 .userInfo h1 {
   text-decoration: underline;
+}
+
+.profile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: dashed black 2px;
+  border-radius: 15px;
+  
+}
+
+#friendshipScroll {
+  width: 50px;
+  height: 100px;
 }
