--- a/client/src/components/Posts/PostStyling/style.css
+++ b/client/src/components/Posts/PostStyling/style.css
@@ -18,15 +18,18 @@
 }
 
 .thought {
-  padding: 0px 50px 0px 50px;
-  margin: 0px 50px 0px 50px;
+  padding: 20px 40px 20px 40px;
+  margin: 25px 25px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  flex-shrink: 0;
+  justify-content: center;
+  align-items: left;
+  border: inset #a1fbb9  5px;
+  background-color: #eef66c;
+  border-radius: 5px
 }
 
-.actions {
+.bottom-buttons .actions {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
@@ -52,4 +55,33 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+  background-color: #1e98b5;
+}
+
+.post li {
+  background-color: #7262d4;
+  border: inset #1eeede 5px;
+  opacity: 90%;
+}
+
+.authorInfo p a, 
+.authorInfo p {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+
+.authorInfo img {
+  clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+  width: 100px;
+  height: 100px;
+}
+
+.pfpCircle {
+  background-color: #fb0df1;
+  border: solid #fbfc0b 1px;
+  border-radius: 50%;
+  margin: 0px 5px 0px 0px;
 }
