--- a/client/src/components/UserInfo/style.css
+++ b/client/src/components/UserInfo/style.css
@@ -16,9 +16,10 @@
   flex-direction: column;
   align-items: center;
   flex-shrink: 0;
-  background-color: #9b454f;
+  background-color: #1eeede;
   border-radius: 25px;
-  border: solid #490b31 2px;
+  border: solid #7262d4 3px;
+  opacity: 90%;
 }
 
 .userInfo h1 {
@@ -29,12 +30,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: dashed black 2px;
+  border: dotted #fb0df1 5px;
   border-radius: 15px;
-  
-}
-
-#friendshipScroll {
-  width: 50px;
-  height: 100px;
 }
