--- a/client/src/components/Posts/PostStyling/style.css
+++ b/client/src/components/Posts/PostStyling/style.css
@@ -20,13 +20,10 @@
 .thought {
   padding: 20px 40px 20px 40px;
   margin: 25px 25px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: left;
   border: groove #a1fbb9  5px;
   background-color: #eef66c;
-  border-radius: 5px
+  border-radius: 5px;
+  width: 80%;
 }
 
 .bottom-buttons .actions {
@@ -44,12 +41,6 @@
   align-self: center;
 }
 
-.originalThought {
-  margin: 5px;
-  padding: 10px;
-  border: solid red 1px;
-  width: 80%;	  
-}
 
 .bottom-buttons {
   display: flex;
@@ -61,16 +52,24 @@
 .post li {
   background-color: #7262d4;
   border: ridge #1eeede 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.authorInfo p a, 
+.authorInfo p a,
 .authorInfo p {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  width: 500px;
 }
 
+.authorInfo p a:last-child {
+  display: flex;
+  justify-content: flex-end;
+}
 
 .authorInfo img {
   clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
@@ -84,4 +83,46 @@
   border: solid #fbfc0b 1px;
   border-radius: 50%;
   margin: 0px 5px 0px 0px;
+}
+
+.divider {
+  border-style: none none none double;
+}
+
+.originalAuthor {
+  display: flex;
+  flex-direciton: row;
+  justify-content: space-between;
+}
+
+
+.originalThought {
+  margin: 5px;
+  padding: 10px;
+  border: solid red 1px;
+  width: 80%;	  
+  visibility: collapse;
+  opacity: 0;
+  position: relative;
+  top: 60px;
+  transition: visibility 0s linear 0.5s, opacity 0.5s ease-in-out, position 0.5s linear ;
+  z-index: 3;
+}
+
+
+.replyBox:hover .originalThought {
+  visibility: visible;
+  opacity: 1;
+  position: static;
+  z-index: 3;
+ }
+
+.replyBox {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.replyThought {
+  z-index: 5;
 }
