--- a/client/src/components/Posts/PostStyling/style.css
+++ b/client/src/components/Posts/PostStyling/style.css
@@ -46,7 +46,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  background-color: #1e98b5;
+  background-color: #1e98b5; 
 }
 
 .post li {
@@ -105,12 +105,13 @@
   opacity: 0;
   position: relative;
   top: 60px;
-  transition: visibility 0s linear 0.5s, opacity 0.5s ease-in-out, position 0.5s linear ;
+  transition: visibility 0s linear 0.5s, opacity 2s ease-in-out, position 0s static linear;
   z-index: 3;
 }
 
 
 .replyBox:hover .originalThought {
+  transition: visibility 0s linear 0.5s, opacity 2s ease-in-out, position 0.5s linear;
   visibility: visible;
   opacity: 1;
   position: static;
