--- a/client/src/components/Navbar/style.css
+++ b/client/src/components/Navbar/style.css
@@ -8,15 +8,21 @@
   justify-content: space-evenly;
   width: 100%;
   border-radius: 50px;
-  background-color: #f89fbe;
+  background-color: #dbebed;
   border-style: inset;
   border-color: #1eeede;
-  opacity: 75%;
-  & a:hover {
-    border: solid purple 2px;
-    border-radius: 50%;
+
+  & a {
+    text-decoration: none;
+    cursor: pointer;
+    transition: all 0,3s ease;
+    &:hover {
+      border: solid #0af6e4 2px;
+      border-radius: 50%;
+      blow-shadow: 0 0 3rem regba(0,255,0, 0.5);
+      trasform: translateY(-0.5rem);
+    }
   }
-  
 }
 
 
