get follow list functional but need to get styling done

--- a/client/src/components/FriendListEntry/style.css
+++ b/client/src/components/FriendListEntry/style.css
@@ -6,7 +6,7 @@
   margin: 0rem 0.125rem 0rem 0.125rem;
 }
 
-.friendInfo {
+.friendInfo a {
   display: flex;
   flex-direction: column;
   justify-content: center;
