--- a/client/src/pages/MainStyles/style.css
+++ b/client/src/pages/MainStyles/style.css
@@ -55,7 +55,8 @@
 .attribute {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;    
+    justify-content: flex-start;
+    width: 13rem;
 }
 
 #pfp {
@@ -65,7 +66,9 @@
 
 }
 
-#editProfile {
+#editProfile,
+#loginEntry,
+#signUp {
     background-color: #03c3c6;
     border-radius: 5px;
     border: solid #342987 2px;
@@ -75,3 +78,10 @@
     align-items: center;
     margin-top: 2.5rem;
 }
+
+.loginPage {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
