--- a/client/src/components/UserLists/userListStyles.css
+++ b/client/src/components/UserLists/userListStyles.css
@@ -6,11 +6,23 @@
   margin: 0rem 0.125rem 0rem 0.125rem;
 }
 
-.friendInfo {
+#profile {
+    display: flex;
+    flex-direction: column;
+}
+
+#userHeader {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+#profileInfo {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
 }
   
+
 
