--- a/client/src/pages/MainStyles/style.css
+++ b/client/src/pages/MainStyles/style.css
@@ -25,6 +25,16 @@
   width: 20%;
 }
 
+#replys {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#replyHeadline {
+    background: red
+}
+
 .thought-and-replys {
   display: flex;
   flex-direciton: column;
