Get replys to populate when on thought page

--- a/client/src/components/Posts/PostStyling/style.css
+++ b/client/src/components/Posts/PostStyling/style.css
@@ -66,8 +66,8 @@ g
   height: 8rem;	 
 }
 
-.authorInfo p a,
-.authorInfo p {
+.authorInfo div a,
+.authorInfo div {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -75,7 +75,7 @@ g
   width: 30rem;
 }
 
-.authorInfo p a:last-child {
+.authorInfo div a:last-child {
   display: flex;
   justify-content: flex-end;
 }
