get interactions to work on thought page and add clear all notifications byutton

--- a/client/src/components/Notifications/style.css
+++ b/client/src/components/Notifications/style.css
@@ -15,8 +15,11 @@
     border-style:  dotted none dotted none;
     border-color:  #fb0df1;
     border-size: 5px;
-
   }
+}
+
+.notifications #clearNotifs {
+    width: 95%;
 }
 
 .userCard {
